--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    color: rgb(21, 112, 56);
+    color: rgb(112, 21, 107);
     text-align: center;
-    font-family: "Verdana";
+    font-family: "Arial";
 }
